--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,9 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:./data/demo
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
 spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.jpa.open-in-view=false
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.html
-logging.level.org.springframework.web=DEBUG
-logging.level.ru.geekbrains=DEBUG
+spring.h2.console.path=/h2
